Update footer to fix font size being too big

--- a/projects/style.css
+++ b/projects/style.css
@@ -32,7 +32,6 @@
     color: white;
     text-align: center;
     font-size: 25px;
-    text-decoration: none;
 }
 
 #embed {
